crates/biome_cli/tests/snapshots/main_cases_css_parsing/ci_css_parse_tailwind_directives_false.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome ci --css-parse-tailwind-directives=false file.css
```

## `file.css`

```css
@import "tailwindcss";
.foo {
  color: red;
}
```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.css format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × File content differs from formatting output
  
    1   │ - @import·'tailwindcss';
    2   │ - .foo·{·color:·red;·}
      1 │ + @import·"tailwindcss";
      2 │ + .foo·{
      3 │ + → color:·red;
      4 │ + }
      5 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
