crates/biome_cli/tests/snapshots/main_cases_css_parsing/lint_css_parse_css_modules_true.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --css-parse-css-modules=true file.module.css
```

## `file.module.css`

```css
.className {
  composes: other from "./other.module.css";
}
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
